--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Bebas Neue";
+  src: url("../fonts/BebasNeueRegular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   font-family: "Noto Sans", sans-serif;
 }
@@ -157,6 +164,89 @@ body {
 
 .header-features-text {
   font-size: 16px;
-
+  font-weight: 400;
   line-height: 160%;
+}
+
+.section {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+.section-title {
+  /* h2 */
+  color: #292d33;
+  font-family: "Bebas Neue";
+  font-size: 60px;
+  line-height: 120%;
+}
+
+.steps {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 30px;
+}
+
+.steps-item {
+  max-width: 330px;
+}
+
+.steps-num {
+  color: rgb(92, 142, 230);
+  font-family: Bebas Neue;
+  font-size: 48px;
+  line-height: 120%;
+  display: flex;
+  align-items: center;
+}
+
+.steps-num::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: #ebebf0;
+  display: inline-block;
+  margin-left: 30px;
+}
+
+.steps-title {
+  color: rgb(41, 45, 51);
+  font-family: Noto Sans;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 160%;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.steps-text {
+  color: rgb(130, 138, 153);
+  font-family: Noto Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.steps-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: rgb(92, 142, 230);
+  font-family: Noto Sans;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 160%;
+}
+
+.steps-link::before {
+  content: "";
+  width: 40px;
+  height: 1px;
+  /* main */
+  background: rgb(92, 142, 230);
+
+  margin-right: 20px;
 }
