--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,13 @@ body {
   top: 0;
   z-index: 2;
   border-bottom: 1px solid rgba(235, 235, 240, 0.2);
-  transition: background-color 0.2s;
+  transition: background-color 0.2s, height 0.2s;
 }
 
 .navbar-light {
   background-color: white;
   color: #292d33;
+  height: 72px;
 }
 .navbar-light .header-logo-path {
   fill: #292d33;
@@ -73,7 +74,9 @@ body {
 }
 
 .header-logo {
-  padding: 25px 50px;
+  display: flex;
+  align-items: center;
+  padding: 0 50px;
   border-right: 1px solid rgba(235, 235, 240, 0.2);
   height: 100%;
 }
