--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 1rem;
+}
+
 @font-face {
   font-family: "Bebas Neue Book";
   src: url("../fonts/BebasNeueBook.woff") format("woff");
@@ -32,9 +36,13 @@ body::-webkit-scrollbar {
 }
 
 .container {
-  max-width: 1440px;
-
+  max-width: 90rem;
   margin: auto;
+}
+
+.logo-svg {
+  width: 8.75rem;
+  height: 2.75rem;
 }
 
 .navbar {
@@ -42,7 +50,7 @@ body::-webkit-scrollbar {
   display: flex;
   align-items: center;
   color: white;
-  height: 94px;
+  height: 5.875rem;
   position: fixed;
   width: 100%;
   left: 0;
@@ -55,14 +63,14 @@ body::-webkit-scrollbar {
 .navbar-light {
   background-color: white;
   color: #292d33;
-  height: 72px;
+  height: 4.5rem;
 }
 .navbar-light .header-logo-path {
   fill: #292d33;
 }
 
 .header {
-  padding-top: 94px;
+  padding-top: 5.875rem;
   min-height: 100vh;
 }
 
@@ -88,7 +96,7 @@ body::-webkit-scrollbar {
 .header-logo {
   display: flex;
   align-items: center;
-  padding: 0 50px;
+  padding: 0 3.125rem;
   border-right: 1px solid rgba(235, 235, 240, 0.2);
   height: 100%;
 }
@@ -98,16 +106,21 @@ body::-webkit-scrollbar {
   flex-basis: 100%;
   display: flex;
   list-style: none;
-  padding: 0 50px;
+  padding: 0;
+  padding-left: 3.125rem;
   margin: 0;
+}
+
+.header-nav-item:not(:last-child) {
+  margin-right: 4%;
 }
 
 .header-nav-link {
   text-decoration: none;
   font-family: Noto Sans;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
-  margin-right: 50px;
+
   color: inherit;
 }
 
@@ -115,23 +128,23 @@ body::-webkit-scrollbar {
   flex-shrink: 0;
   display: flex;
   align-items: center;
-  gap: 10px;
-  margin-right: 50px;
+  gap: 0.625rem;
+  margin-right: 3.125rem;
 }
 
 .header-phone-link {
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1rem;
   color: inherit;
 }
 
 .button {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600;
   line-height: 160%;
   color: rgb(255, 255, 255);
   background: #5c8ee5;
-  padding: 25px 60px 25px 60px;
+  padding: 1.5625rem 3.75rem;
   border: none;
   display: inline-block;
   cursor: pointer;
@@ -140,7 +153,7 @@ body::-webkit-scrollbar {
 .navbar-button {
   height: 100%;
   flex-shrink: 0;
-  padding: 25px 53px;
+  padding: 1.5625rem 3.3125rem;
 }
 
 .header-button {
@@ -148,49 +161,49 @@ body::-webkit-scrollbar {
 }
 
 .separator {
-  width: 150px;
+  width: 9.375rem;
   height: 2px;
   background: rgb(92, 142, 230);
 }
 
 .header-content {
-  padding-top: 150px;
+  padding-top: 9.375rem;
   position: relative;
   z-index: 1;
   color: white;
 }
 .header-title {
-  max-width: 1080px;
+  max-width: 67.5rem;
   font-family: "Bebas Neue";
   font-weight: 400;
-  font-size: 80px;
+  font-size: 5rem;
   line-height: 120%;
-  margin: 23px 0 38px 0;
+  margin: 1.4375rem 0 2.375rem 0;
 }
 
 .header-text {
-  max-width: 720px;
+  max-width: 45rem;
   color: rgb(255, 255, 255);
   font-family: Noto Sans;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
   letter-spacing: 0;
   word-spacing: 1.6px;
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
 }
 
 .header-features {
   display: flex;
-  max-height: 168px;
+  max-height: 10.5rem;
   padding: 0;
-  margin-top: 100px;
+  margin-top: 6.25rem;
   list-style: none;
   color: white;
   position: relative;
 }
 .header-features-item {
-  padding: 30px 50px;
+  padding: 1.875rem 3.125rem;
   border: 1px solid rgba(235, 235, 240, 0.2);
   width: 25%;
 }
@@ -200,7 +213,7 @@ body::-webkit-scrollbar {
 }
 
 .header-features-text {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
   letter-spacing: 0;
@@ -209,8 +222,8 @@ body::-webkit-scrollbar {
 }
 
 .section {
-  margin-top: 150px;
-  margin-bottom: 150px;
+  margin-top: 9.375rem;
+  margin-bottom: 9.375rem;
   /* margin-left: 240px;
   margin-right: 270px; */
 }
@@ -219,9 +232,9 @@ body::-webkit-scrollbar {
   /* h2 */
   color: #292d33;
   font-family: "Bebas Neue book";
-  font-size: 60px;
+  font-size: 3.75rem;
   line-height: 120%;
-  margin-top: 25px;
+  margin-top: 1.5625rem;
   letter-spacing: 0.3px;
 }
 
@@ -229,17 +242,17 @@ body::-webkit-scrollbar {
   display: flex;
   list-style: none;
   padding: 0;
-  gap: 30px;
+  gap: 1.875rem;
 }
 
 .steps-item {
-  max-width: 330px;
+  max-width: 20.625rem;
 }
 
 .steps-num {
   color: rgb(92, 142, 230);
   font-family: Bebas Neue;
-  font-size: 48px;
+  font-size: 3rem;
   line-height: 120%;
   display: flex;
   align-items: center;
@@ -251,28 +264,28 @@ body::-webkit-scrollbar {
   height: 1px;
   background: #ebebf0;
   display: inline-block;
-  margin-left: 30px;
+  margin-left: 1.875rem;
 }
 
 .steps-title {
   color: rgb(41, 45, 51);
   font-family: Noto Sans;
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: 400;
   line-height: 160%;
-  margin-top: 35px;
-  margin-bottom: 10px;
+  margin-top: 2.1875rem;
+  margin-bottom: 0.625rem;
   letter-spacing: 0.2px;
 }
 
 .steps-text {
   color: rgb(130, 138, 153);
   font-family: Noto Sans;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 166%;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 0.625rem;
+  margin-bottom: 1.25rem;
   letter-spacing: 0.2px;
   word-spacing: 1.1px;
 }
@@ -283,17 +296,43 @@ body::-webkit-scrollbar {
   text-decoration: none;
   color: rgb(92, 142, 230);
   font-family: Noto Sans;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 620;
   line-height: 160%;
 }
 
 .steps-link::before {
   content: "";
-  width: 40px;
+  width: 2.5rem;
   height: 1px;
   /* main */
   background: rgb(92, 142, 230);
+  margin-right: 1.25rem;
+}
 
-  margin-right: 20px;
+@media (max-width: 1700px) {
+  html {
+    font-size: 14px;
+  }
+  .header-image {
+    background-position: center;
+  }
+}
+
+@media (max-width: 1478px) {
+  html {
+    font-size: 12px;
+  }
+  .header-image {
+    background-position: center;
+  }
+}
+
+@media (max-width: 1252px) {
+  html {
+    font-size: 10px;
+  }
+  .header-image {
+    background-position: center;
+  }
 }
