--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ body {
   font-family: "Noto Sans", sans-serif;
 }
 
+.mobile-menu {
+  display: none;
+}
+
 body::-webkit-scrollbar {
   display: none;
 }
@@ -38,11 +42,6 @@ body::-webkit-scrollbar {
 .container {
   max-width: 90rem;
   margin: auto;
-}
-
-.logo-svg {
-  width: 8.75rem;
-  height: 2.75rem;
 }
 
 .navbar {
@@ -65,6 +64,16 @@ body::-webkit-scrollbar {
   color: #292d33;
   height: 4.5rem;
 }
+
+.phone-icon {
+  fill: #5c8ee6;
+}
+
+.logo-svg {
+  width: 9rem;
+  height: 2.75rem;
+}
+
 .navbar-light .header-logo-path {
   fill: #292d33;
 }
@@ -159,6 +168,11 @@ body::-webkit-scrollbar {
   height: 100%;
   flex-shrink: 0;
   padding: 1.5625rem 3.3125rem;
+  background: #5c8ee6;
+}
+
+.navbar-button .button-icon {
+  display: none;
 }
 
 .header-button {
@@ -329,20 +343,177 @@ body::-webkit-scrollbar {
   }
 }
 
-@media (max-width: 1478px) {
+@media (max-width: 1460px) {
   html {
-    font-size: 12px;
+    font-size: 13px;
   }
-  .header-image {
-    background-position: center;
+  .headr-logo {
+    padding: 2rem;
+  }
+  .logo-svg {
+    max-width: 6rem;
+  }
+  .header-nav {
+    padding-left: 2rem;
+  }
+  .header-nav-item:not(:last-child) {
+    margin-right: 1rem;
+  }
+  .header-phone {
+    margin-right: 2rem;
   }
 }
 
-@media (max-width: 1252px) {
-  html {
-    font-size: 10px;
+@media (max-width: 1200px) {
+  .container {
+    max-width: 70rem;
   }
-  .header-image {
-    background-position: center;
+  .header-phone {
+    display: none;
+  }
+  .navbar {
+    height: 5rem;
+  }
+  .navbar-button {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 992px) {
+  html {
+    font-size: 12px;
+  }
+  .container {
+    max-width: 60rem;
+  }
+  .header-nav {
+    display: none;
+  }
+  .header-logo {
+    flex-grow: 1;
+    justify-content: center;
+  }
+  .mobile-menu-toggle {
+    width: 80px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1.8rem;
+    border-right: 1px solid rgba(235, 235, 240, 0.2);
+  }
+  .navbar-light .mobile-menu-line {
+    background-color: #333;
+  }
+
+  .mobile-menu-line {
+    height: 1px;
+    background-color: #fff;
+    width: 100%;
+  }
+  .mobile-menu-line:nth-child(2) {
+    width: 80%;
+  }
+  .navbar-button .button-text {
+    display: none;
+  }
+  .navbar-button .button-icon {
+    display: block;
+    fill: #ffffff;
+  }
+
+  .mobile-menu {
+    /* display: block; */
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    z-index: 2;
+    background-color: #fff;
+    padding-top: 5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .mobile-menu.is-open {
+    display: block;
+  }
+  .mobile-menu-nav {
+    list-style: none;
+    padding: 0;
+  }
+  .mobile-menu-nav-item {
+    margin-bottom: 2rem;
+  }
+  .mobile-menu-link {
+    text-decoration: none;
+    font-family: Noto Sans;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 160%;
+    color: #292d33;
+  }
+  .mobile-submenu {
+    list-style: none;
+    padding: 0;
+    padding-left: 1rem;
+    margin-top: 1rem;
+  }
+  .mobile-submenu-link {
+    text-decoration: none;
+    color: rgb(130, 138, 153);
+    font-family: Noto Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 160%;
+    letter-spacing: 0%;
+  }
+
+  .mobile-phone {
+    display: block;
+    color: rgb(41, 45, 51);
+    font-family: Noto Sans;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 160%;
+    letter-spacing: 0%;
+    text-decoration-line: underline;
+    border-top: 1px solid #ebebf0;
+    padding-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .mobile-info {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+  .mobile-info-adress,
+  .mobile-info-email {
+    text-decoration: none;
+    font-style: normal;
+    color: rgb(41, 45, 51);
+    font-family: Noto Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 160%;
+    letter-spacing: 0%;
+  }
+
+  .social-info {
+    height: 24px;
+    display: flex;
+    gap: 0.9375rem;
+    margin-top: 1.25rem;
+    margin-bottom: 0.9375rem;
+  }
+
+  .social-icon {
+    width: 24px;
+    height: 24px;
   }
 }
