fix:  header-logo padding

--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ body::-webkit-scrollbar {
   html {
     font-size: 13px;
   }
-  .headr-logo {
+  .header-logo {
     padding: 2rem;
   }
   .logo-svg {
