--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,6 @@ body {
 
 .header {
   padding-top: 5.875rem;
-  min-height: 100vh;
 }
 
 .header-image {
@@ -210,7 +209,7 @@ body {
 
 .header-features {
   display: flex;
-  max-height: 10.5rem;
+  min-height: 10.5rem;
   padding: 0;
   margin-top: 6.25rem;
   list-style: none;
@@ -224,12 +223,25 @@ body {
 }
 .header-features-item {
   padding: 1.875rem 3.125rem;
+  min-height: 90%;
   border: 1px solid rgba(235, 235, 240, 0.2);
-  width: 25%;
+  width: 18rem;
 }
 
-.header-features-item:not(:last-child) {
-  border-right: none;
+.slider-buttons {
+  display: none;
+  height: 44px;
+}
+
+.slider-button-prev,
+.slider-button-next {
+  height: 100%;
+  flex-basis: 50%;
+  border: 1px solid rgba(235, 235, 240, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .header-features-text {
@@ -373,6 +385,9 @@ body {
   .navbar-button {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+  .slider-buttons {
+    display: flex;
   }
 }
 @media (max-width: 992px) {
@@ -523,5 +538,33 @@ body {
   }
   .close-menu .mobile-menu-line:nth-child(3) {
     transform: rotate(-45deg) translateY(-10px);
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 40rem;
+  }
+
+  .header-title {
+    font-size: 4rem;
+  }
+
+  .header-content {
+    padding-top: 3rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    max-width: 90%;
+  }
+
+  .header-title {
+    font-size: 2rem;
+  }
+
+  .header-content {
+    padding-top: 2rem;
   }
 }
