--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,6 @@ body {
 
 .header {
   padding-top: 5.875rem;
-  min-height: 100vh;
 }
 
 .header-image {
@@ -210,10 +209,9 @@ body {
 
 .header-features {
   display: flex;
-
-  max-height: 10.5rem;
+  min-height: 10.5rem;
   padding: 0;
-  margin-top: 102px;
+  margin-top: 6.25rem;
   list-style: none;
   color: white;
   position: relative;
@@ -223,15 +221,20 @@ body {
   width: 2.25rem;
   height: 2.25rem;
 }
+.header-features-item {
+  padding: 1.875rem 3.125rem;
+  min-height: 90%;
+  border: 1px solid rgba(235, 235, 240, 0.2);
+  width: 18rem;
+}
 
 .slider-buttons {
   display: none;
   height: 44px;
-  /* margin-top: 30px; */
 }
 
-.sliper-button-prev,
-.sliper-button-next {
+.slider-button-prev,
+.slider-button-next {
   height: 100%;
   flex-basis: 50%;
   border: 1px solid rgba(235, 235, 240, 0.2);
@@ -241,18 +244,6 @@ body {
   cursor: pointer;
 }
 
-.header-features-item {
-  padding: 1.75rem 3.125rem;
-  min-height: 100%;
-  width: 18rem;
-
-  border: 1px solid rgba(235, 235, 240, 0.2);
-}
-
-.header-features-item:not(:last-child) {
-  border-right: none;
-}
-
 .header-features-text {
   font-size: 1rem;
   font-weight: 400;
@@ -260,8 +251,6 @@ body {
   letter-spacing: 0;
   letter-spacing: 0.2px;
   line-height: 164%;
-  margin-top: 1.125rem;
-  margin-bottom: 0;
 }
 
 .section {
@@ -397,7 +386,6 @@ body {
     padding-left: 2rem;
     padding-right: 2rem;
   }
-
   .slider-buttons {
     display: flex;
   }
@@ -557,9 +545,11 @@ body {
   .container {
     max-width: 40rem;
   }
+
   .header-title {
     font-size: 4rem;
   }
+
   .header-content {
     padding-top: 3rem;
   }
@@ -569,9 +559,11 @@ body {
   .container {
     max-width: 90%;
   }
+
   .header-title {
     font-size: 2rem;
   }
+
   .header-content {
     padding-top: 2rem;
   }
