--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ body {
 }
 .header-features-item {
   padding: 1.875rem 3.125rem;
-  min-height: 90%;
+  height: auto;
   border: 1px solid rgba(235, 235, 240, 0.2);
   width: 18rem;
 }
