--- a/css/style.css
+++ b/css/style.css
@@ -110,13 +110,21 @@ body {
 }
 
 .header-nav {
-  /* flex-grow: 1; */
+  flex-grow: 1;
   flex-basis: 100%;
   display: flex;
+  align-items: center;
+  height: 100%;
   list-style: none;
   padding: 0;
   padding-left: 3.125rem;
   margin: 0;
+}
+
+.header-nav-item {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .header-nav-item:not(:last-child) {
@@ -128,8 +136,34 @@ body {
   font-family: Noto Sans;
   font-size: 1rem;
   font-weight: 500;
-
   color: inherit;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  position: relative;
+  /* border-bottom: 2px solid rgba(92, 142, 230, 100); */
+}
+
+.header-nav-link:after {
+  content: "";
+  /* width: 100%; */
+  width: 0px;
+  height: 2px;
+  position: absolute;
+  bottom: -1px;
+  background-color: rgba(92, 142, 230, 100);
+  /* transform: scaleX(0); */
+  /* transition: transform 0.3s; */
+  transition: width 0.3s;
+  right: 0;
+  left: auto;
+}
+
+.header-nav-link:hover::after {
+  /* transform: scaleX(1); */
+  width: 100%;
+  right: auto;
+  left: 0;
 }
 
 .header-phone {
@@ -346,6 +380,11 @@ body {
   /* main */
   background: rgb(92, 142, 230);
   margin-right: 1.25rem;
+  transition: width 0.2s;
+}
+
+.steps-link:hover:before {
+  width: 60px;
 }
 
 .swiper2 {
@@ -375,6 +414,60 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  flex-basis: 33%;
+  border: 1px solid #ebebf0;
+  position: relative;
+  text-decoration: none;
+  transition: border 0.3s;
+}
+
+.card:hover .card-title {
+  transition: color 0.5s;
+}
+
+.card:hover .card-title {
+  color: #5c8ee6;
+}
+
+.card:hover {
+  border-color: #5c8ee6;
+}
+
+.card-image {
+  position: absolute;
+  width: 90%;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
+}
+.card-content {
+  padding: 2.5rem 3.125rem;
+}
+
+.card-title {
+  color: #292d33;
+  font-size: 1.75rem;
+  font-weight: 400;
+  line-height: 140%;
+  margin-top: 0;
+  margin-bottom: 0.625rem;
+  transition: color 0.3s;
+}
+
+.card-text {
+  color: #828a99;
+  font-size: 1rem;
+  line-height: 160%;
+  text-align: left;
+  margin-bottom: 24.625rem;
 }
 
 @media (max-width: 1700px) {
@@ -438,6 +531,9 @@ body {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
     width: 300px;
+  }
+  .card {
+    flex-basis: 50%;
   }
 }
 @media (max-width: 992px) {
@@ -602,6 +698,9 @@ body {
 
   .header-content {
     padding-top: 3rem;
+  }
+  .card {
+    flex-basis: 100%;
   }
 }
 
