--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,10 @@ body::-webkit-scrollbar {
   letter-spacing: 0.3px;
 }
 
+.section-title_375px {
+  display: none;
+}
+
 .steps {
   display: flex;
   list-style: none;
@@ -588,7 +592,7 @@ body::-webkit-scrollbar {
     display: none;
   }
   .navbar {
-    height: 5rem;
+    height: 5.6rem;
   }
   .navbar-button {
     padding-left: 2rem;
@@ -628,21 +632,25 @@ body::-webkit-scrollbar {
   .container {
     max-width: 60rem;
   }
+
   .header-nav {
     display: none;
   }
   .header-logo {
     flex-grow: 1;
     justify-content: center;
+    padding: 1rem;
   }
-
+  .logo-svg {
+    max-width: 10rem;
+  }
   .mobile-menu-toggle {
     width: 80px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1.8rem;
+    padding: 2.2rem 2.5rem;
     border-right: 1px solid rgba(235, 235, 240, 0.2);
   }
   .navbar-light .mobile-menu-line {
@@ -658,6 +666,11 @@ body::-webkit-scrollbar {
   .mobile-menu-line:nth-child(2) {
     width: 80%;
   }
+  .navbar-button {
+    padding-left: 2.3rem;
+    padding-right: 2.3rem;
+  }
+
   .navbar-button .button-text {
     display: none;
   }
@@ -774,7 +787,12 @@ body::-webkit-scrollbar {
     min-width: 6.25rem;
     height: 6.25rem;
   }
-
+  .tm-text-bg,
+  .tm-text-sm {
+    margin-right: 1.875rem;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px;
+  }
   .tm-image {
     max-width: 100%;
     object-fit: cover;
@@ -794,11 +812,22 @@ body::-webkit-scrollbar {
 
   .header-title {
     font-size: 4rem;
+    margin: 1.4375rem 0 1.1rem 0;
+  }
+
+  .header-text {
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 153%;
+    letter-spacing: 0px;
+    word-spacing: -0.0625rem;
+    margin-bottom: 2.625rem;
   }
 
   .header-content {
-    padding-top: 3rem;
+    padding-top: 4rem;
   }
+
   .card {
     flex-basis: 100%;
   }
@@ -806,30 +835,117 @@ body::-webkit-scrollbar {
 
 @media (max-width: 576px) {
   .container {
-    max-width: 90%;
+    max-width: 92%;
   }
-
-  .header-title {
+  .company-button {
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 120%;
+    padding: 1.7625rem 7.2rem;
+  }
+  /* .header-title {
     font-size: 2rem;
+  } */
+
+  .header-features {
+    margin-top: 4.35rem;
   }
 
-  .header-content {
+  .header-features-item {
+    padding: 1.575rem 2.4rem;
+  }
+
+  .header-features-text {
+    font-size: 1.2rem;
+    /* font-weight: 400;
+    line-height: 160%; */
+    letter-spacing: 0;
+    letter-spacing: -0.0063rem;
+    line-height: 184%;
+    /* padding-bottom: 7px; */
+    height: 2.8rem;
+  }
+
+  .slider-buttons {
+    margin-top: -1.1rem;
+  }
+
+  .separator {
+    width: 8.4rem;
+  }
+
+  /* .header-content {
     padding-top: 2rem;
+  } */
+
+  .section {
+    margin-top: 8.375rem;
+  }
+
+  .section-title {
+    font-size: 2.75rem;
+    letter-spacing: 0.5px;
+    margin-bottom: 3rem;
+  }
+  .steps-num {
+    font-size: 4rem;
+  }
+
+  .steps-title {
+    margin-top: 0.8rem;
+  }
+
+  .steps-slider-button-prev,
+  .steps-slider-button-next {
+    width: 5.05rem;
+  }
+
+  .steps-link::before {
+    width: 3.2rem;
   }
   .steps-item {
     max-width: 100%;
   }
+  .card-content {
+    padding: 1.3rem 2.25rem;
+  }
 
+  .card-title {
+    letter-spacing: -0.4px;
+  }
+
+  .card-text {
+    margin-bottom: 22.1rem;
+    margin-top: 0.1rem;
+    font-size: 1.19rem;
+  }
+
+  .section-title_full {
+    display: none;
+  }
+
+  .section-title_375px {
+    display: block;
+  }
+
+  .trademark {
+    flex-wrap: wrap;
+    /* padding: 1.875rem; */
+    padding: 1.6rem 2.5rem;
+  }
   .tm-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1.875rem;
+    gap: 3.4rem;
+    min-height: 10rem;
+    padding-left: 1.1rem;
   }
 
   .tm-image-container {
     width: 6.25rem;
-    min-height: 6.25rem;
+    /* min-height: 6.25rem; */
+    height: 100%;
   }
 
   .tm-image {
@@ -837,10 +953,6 @@ body::-webkit-scrollbar {
     max-width: 100%;
   }
 
-  .trademark {
-    flex-wrap: wrap;
-    padding: 1.875rem;
-  }
   .tm-text-bg {
     display: none;
   }
