add: founder block+ adaptiv_1920px-375px

--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ body::-webkit-scrollbar {
   word-spacing: 1.1px;
 }
 
-.steps-link {
+.button-link {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -385,7 +385,7 @@ body::-webkit-scrollbar {
   line-height: 160%;
 }
 
-.steps-link::before {
+.button-link::before {
   content: "";
   width: 2.5rem;
   height: 1px;
@@ -395,7 +395,7 @@ body::-webkit-scrollbar {
   transition: width 0.2s;
 }
 
-.steps-link:hover:before {
+.button-link:hover:before {
   width: 60px;
 }
 
@@ -516,9 +516,9 @@ body::-webkit-scrollbar {
   border: 1px solid #ebebf0;
   text-decoration: none;
   transition: border 0.3s;
-  padding: 3.125rem;
+  padding: 3.25rem 3.125rem;
   display: grid;
-  grid-template-columns: 180px 1fr;
+  grid-template-columns: 11.25rem 1fr;
   grid-template-rows: auto 2fr;
   grid-column-gap: 3.125rem;
   grid-template-areas:
@@ -563,6 +563,107 @@ body::-webkit-scrollbar {
 
 .trademark-card:hover {
   border-color: #5c8ee6;
+}
+
+.founder {
+  position: relative;
+  min-height: 41.25rem;
+}
+
+.founder-photo {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 43.7%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.founder-content {
+  max-width: 45rem;
+  margin-top: 3.125rem;
+}
+
+.founder-link-375 {
+  display: none;
+}
+
+.founder-content-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.section-title-founder {
+  margin-bottom: 1.64rem;
+}
+
+.founder-text {
+  color: rgb(130, 138, 153);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 163%;
+  padding-bottom: 0.525rem;
+}
+
+.clients-wrapper {
+  display: flex;
+  gap: 0.6rem;
+}
+
+.clients-content {
+  flex-basis: 50%;
+}
+.clients-list {
+  margin-top: -6px;
+  list-style: none;
+  padding: 0;
+  columns: 2 auto;
+}
+
+.clients-list-item {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+  color: rgb(41, 45, 51);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+  letter-spacing: 0.1px;
+}
+
+.clients-list-item:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+
+.clients-logo-list {
+  margin-top: 1.875rem;
+  flex-shrink: 10;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
+
+.clients-logo-item {
+  flex-basis: 33%;
+  min-height: 10rem;
+  border: 1px solid #ebebf0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  filter: grayscale(100%);
+  transition: filter 0.3s;
+}
+
+.clients-logo-item:hover {
+  filter: grayscale(0%);
+  transition: filter 0.3s;
+}
+
+.clients-logo {
+  max-width: 100%;
+  width: 70px;
+  height: 70px;
 }
 
 @media (max-width: 1700px) {
@@ -646,208 +747,240 @@ body::-webkit-scrollbar {
     grid-template-columns: auto auto;
     /* grid-template-rows: auto 2fr; */
   }
-  @media (max-width: 992px) {
-    html {
-      font-size: 12px;
-    }
-    .container {
-      max-width: 60rem;
-    }
 
-    .header-nav {
-      display: none;
-    }
-    .header-logo {
-      flex-grow: 1;
-      justify-content: center;
-      padding: 1rem;
-    }
-    .logo-svg {
-      max-width: 10rem;
-    }
-    .mobile-menu-toggle {
-      width: 80px;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 2.2rem 2.5rem;
-      border-right: 1px solid rgba(235, 235, 240, 0.2);
-    }
-    .navbar-light .mobile-menu-line {
-      background-color: #333;
-    }
-
-    .mobile-menu-line {
-      height: 1px;
-      background-color: #fff;
-      width: 100%;
-      transition: transform 0.2s;
-    }
-    .mobile-menu-line:nth-child(2) {
-      width: 80%;
-    }
-    .navbar-button {
-      padding-left: 2.3rem;
-      padding-right: 2.3rem;
-    }
-
-    .navbar-button .button-text {
-      display: none;
-    }
-    .navbar-button .button-icon {
-      display: block;
-      fill: #ffffff;
-    }
-
-    .mobile-menu {
-      /* display: block; */
-      position: fixed;
-      top: 0;
-      right: 0;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
-      overflow-y: auto;
-      z-index: 2;
-      background-color: #fff;
-      padding-top: 5rem;
-      padding-left: 1.5rem;
-      padding-right: 1.5rem;
-    }
-
-    .mobile-menu.is-open {
-      display: block;
-    }
-    .mobile-menu-nav {
-      list-style: none;
-      padding: 0;
-    }
-    .mobile-menu-nav-item {
-      margin-bottom: 2rem;
-    }
-    .mobile-menu-link {
-      text-decoration: none;
-      font-family: Noto Sans;
-      font-size: 14px;
-      font-weight: 700;
-      line-height: 160%;
-      color: #292d33;
-    }
-    .mobile-submenu {
-      list-style: none;
-      padding: 0;
-      padding-left: 1rem;
-      margin-top: 1rem;
-    }
-    .mobile-submenu-link {
-      text-decoration: none;
-      color: rgb(130, 138, 153);
-      font-family: Noto Sans;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 160%;
-      letter-spacing: 0%;
-    }
-
-    .mobile-phone {
-      display: block;
-      color: rgb(41, 45, 51);
-      font-family: Noto Sans;
-      font-size: 20px;
-      font-weight: 600;
-      line-height: 160%;
-      letter-spacing: 0%;
-      text-decoration-line: underline;
-      border-top: 1px solid #ebebf0;
-      padding-top: 2rem;
-      margin-bottom: 2rem;
-    }
-    .mobile-info {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      margin-bottom: 1rem;
-    }
-    .mobile-info-adress,
-    .mobile-info-email {
-      text-decoration: none;
-      font-style: normal;
-      color: rgb(41, 45, 51);
-      font-family: Noto Sans;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 160%;
-      letter-spacing: 0%;
-    }
-
-    .social-info {
-      height: 24px;
-      display: flex;
-      gap: 0.9375rem;
-      margin-top: 1.25rem;
-      margin-bottom: 0.9375rem;
-    }
-
-    .social-icon {
-      width: 24px;
-      height: 24px;
-    }
-
-    .close-menu .mobile-menu-line:nth-child(2) {
-      display: none;
-    }
-    .close-menu .mobile-menu-line:nth-child(1) {
-      transform: rotate(45deg) translateY(10px);
-    }
-    .close-menu .mobile-menu-line:nth-child(3) {
-      transform: rotate(-45deg) translateY(-10px);
-    }
-
-    .trademarks {
-      flex-wrap: wrap;
-    }
-    .trademark {
-      flex-basis: 100%;
-    }
-
-    .trademark-cards {
-      flex-direction: column;
-    }
+  .founder-content {
+    max-width: 35rem;
   }
 
-  @media (max-width: 768px) {
-    .container {
-      max-width: 40rem;
-    }
+  .clients-content {
+    flex-basis: 60%;
+  }
 
-    .header-title {
-      font-size: 4rem;
-      margin: 1.4375rem 0 1.1rem 0;
-    }
+  .clients-wrapper {
+    gap: 2.6rem;
+  }
 
-    .header-text {
-      font-size: 1.2rem;
-      font-weight: 400;
-      line-height: 153%;
-      letter-spacing: 0px;
-      word-spacing: -0.0625rem;
-      margin-bottom: 2.625rem;
-    }
+  .section-title-client {
+    font-size: 2.8rem;
+    line-height: 125%;
+    margin-bottom: 3.5rem;
+  }
+}
 
-    .header-content {
-      padding-top: 4rem;
-    }
+@media (max-width: 992px) {
+  html {
+    font-size: 12px;
+  }
+  .container {
+    max-width: 60rem;
+  }
 
-    .card {
-      flex-basis: 100%;
-    }
+  .header-nav {
+    display: none;
+  }
+  .header-logo {
+    flex-grow: 1;
+    justify-content: center;
+    padding: 1rem;
+  }
+  .logo-svg {
+    max-width: 10rem;
+  }
+  .mobile-menu-toggle {
+    width: 80px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2.2rem 2.5rem;
+    border-right: 1px solid rgba(235, 235, 240, 0.2);
+  }
+  .navbar-light .mobile-menu-line {
+    background-color: #333;
+  }
 
-    .trademark-card {
-      padding: 1.875rem;
-      grid-column-gap: 1.875rem;
-    }
+  .mobile-menu-line {
+    height: 1px;
+    background-color: #fff;
+    width: 100%;
+    transition: transform 0.2s;
+  }
+  .mobile-menu-line:nth-child(2) {
+    width: 80%;
+  }
+  .navbar-button {
+    padding-left: 2.3rem;
+    padding-right: 2.3rem;
+  }
+
+  .navbar-button .button-text {
+    display: none;
+  }
+  .navbar-button .button-icon {
+    display: block;
+    fill: #ffffff;
+  }
+
+  .mobile-menu {
+    /* display: block; */
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    z-index: 2;
+    background-color: #fff;
+    padding-top: 5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .mobile-menu.is-open {
+    display: block;
+  }
+  .mobile-menu-nav {
+    list-style: none;
+    padding: 0;
+  }
+  .mobile-menu-nav-item {
+    margin-bottom: 2rem;
+  }
+  .mobile-menu-link {
+    text-decoration: none;
+    font-family: Noto Sans;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 160%;
+    color: #292d33;
+  }
+  .mobile-submenu {
+    list-style: none;
+    padding: 0;
+    padding-left: 1rem;
+    margin-top: 1rem;
+  }
+  .mobile-submenu-link {
+    text-decoration: none;
+    color: rgb(130, 138, 153);
+    font-family: Noto Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 160%;
+    letter-spacing: 0%;
+  }
+
+  .mobile-phone {
+    display: block;
+    color: rgb(41, 45, 51);
+    font-family: Noto Sans;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 160%;
+    letter-spacing: 0%;
+    text-decoration-line: underline;
+    border-top: 1px solid #ebebf0;
+    padding-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .mobile-info {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+  .mobile-info-adress,
+  .mobile-info-email {
+    text-decoration: none;
+    font-style: normal;
+    color: rgb(41, 45, 51);
+    font-family: Noto Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 160%;
+    letter-spacing: 0%;
+  }
+
+  .social-info {
+    height: 24px;
+    display: flex;
+    gap: 0.9375rem;
+    margin-top: 1.25rem;
+    margin-bottom: 0.9375rem;
+  }
+
+  .social-icon {
+    width: 24px;
+    height: 24px;
+  }
+
+  .close-menu .mobile-menu-line:nth-child(2) {
+    display: none;
+  }
+  .close-menu .mobile-menu-line:nth-child(1) {
+    transform: rotate(45deg) translateY(10px);
+  }
+  .close-menu .mobile-menu-line:nth-child(3) {
+    transform: rotate(-45deg) translateY(-10px);
+  }
+
+  .trademarks {
+    flex-wrap: wrap;
+  }
+  .trademark {
+    flex-basis: 100%;
+  }
+
+  .trademark-cards {
+    flex-direction: column;
+  }
+  .clients-wrapper {
+    flex-direction: column;
+  }
+
+  .founder-content {
+    max-width: 30rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 40rem;
+  }
+
+  .header-title {
+    font-size: 4rem;
+    margin: 1.4375rem 0 1.1rem 0;
+  }
+
+  .header-text {
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 153%;
+    letter-spacing: 0px;
+    word-spacing: -0.0625rem;
+    margin-bottom: 2.625rem;
+  }
+
+  .header-content {
+    padding-top: 4rem;
+  }
+
+  .card {
+    flex-basis: 100%;
+  }
+
+  .trademark-card {
+    padding: 1.875rem;
+    grid-column-gap: 1.875rem;
+  }
+
+  .founder-photo {
+    position: relative;
+    width: 100%;
+    margin-bottom: 0.8rem;
   }
 }
 
@@ -888,6 +1021,23 @@ body::-webkit-scrollbar {
     margin-top: -1.1rem;
   }
 
+  .clients-list-item {
+    gap: 1.55rem;
+    font-size: 1.16rem;
+  }
+  .clients-logo-list {
+    margin-top: 0;
+  }
+
+  .clients-logo {
+    width: 50px;
+    height: 50px;
+  }
+
+  .clients-logo-item {
+    min-height: 9.15rem;
+  }
+
   .separator {
     width: 8.4rem;
   }
@@ -905,6 +1055,33 @@ body::-webkit-scrollbar {
     letter-spacing: 0.5px;
     margin-bottom: 3rem;
   }
+
+  .section-title-founder {
+    margin-bottom: 1.2rem;
+  }
+
+  .section-title-client {
+    margin-bottom: 3.5rem;
+  }
+
+  .founder-text {
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 150%;
+    padding-bottom: 0;
+  }
+
+  .founder-link-1920 {
+    display: none;
+  }
+
+  .founder-link-375 {
+    display: block;
+    font-size: 1.2rem;
+    font-weight: 620;
+    line-height: 160%;
+  }
+
   .steps-num {
     font-size: 4rem;
   }
@@ -918,7 +1095,7 @@ body::-webkit-scrollbar {
     width: 5.05rem;
   }
 
-  .steps-link::before {
+  .button-link::before {
     width: 3.2rem;
   }
   .steps-item {
@@ -952,14 +1129,18 @@ body::-webkit-scrollbar {
     padding: 1.6rem 2.5rem;
   }
 
+  .trademark-cards {
+    margin-top: 0;
+    padding-top: 0.3rem;
+  }
+
   .trademark-card {
-    grid-template-columns: 100px auto;
-    grid-template-rows: 100px 1fr;
+    grid-template-columns: 8.35rem auto;
+    grid-template-rows: 8.25rem auto;
     grid-row-gap: 1.9rem;
     grid-template-areas:
       "logo title"
-      "text text";
-
+      "text text ";
     padding-left: 2.5rem;
   }
 
@@ -976,5 +1157,13 @@ body::-webkit-scrollbar {
   .trademark-card-text {
     font-size: 1.1rem;
     letter-spacing: 0.5px;
+  }
+
+  .clients-list {
+    columns: 1;
+  }
+
+  .clients-logo-item {
+    flex-basis: 50%;
   }
 }
