--- a/css/style.css
+++ b/css/style.css
@@ -275,12 +275,13 @@ body::-webkit-scrollbar {
 }
 
 .slider-buttons {
-  display: none;
+  /* display: none; */
   height: 44px;
 }
 
 .slider-button-prev,
 .slider-button-next {
+  flex-basis: 50%;
   height: 100%;
   flex-basis: 50%;
   border: 1px solid rgba(235, 235, 240, 0.2);
@@ -411,17 +412,26 @@ body::-webkit-scrollbar {
   /* overflow: hidden; */
 }
 
-.steps-slider-buttons {
-  display: none;
-  height: 40px;
+.primary-buttons-wrapper {
+  display: flex;
+  height: 60px;
+
+  justify-content: flex-end;
 }
 
-.steps-slider-button-prev,
-.steps-slider-button-next {
+.steps-slider-buttons {
+  display: none;
+  width: 80px;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.primary-button-prev,
+.primary-button-next {
   height: 100%;
-  width: 40px;
   border: 1px solid rgba(235, 235, 240, 0.2);
   background: #5c8ee6;
+  width: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -666,6 +676,68 @@ body::-webkit-scrollbar {
   height: 70px;
 }
 
+.blog-card {
+  display: flex;
+  position: relative;
+  min-height: 25rem;
+  flex-direction: column;
+  text-decoration: none;
+  color: #fff;
+  justify-content: flex-end;
+  padding: 3.125rem;
+}
+
+.blog-card::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(41, 45, 51, 0.6);
+  z-index: -1;
+}
+
+.blog-card-image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
+.blog-card-title {
+  color: rgb(255, 255, 255);
+  font-style: normal;
+  font-size: 1.75rem;
+  font-weight: 400;
+  line-height: 160%;
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+
+.blog-card-text {
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+  font-style: normal;
+  margin: 0;
+}
+
+.blog-slider-footer {
+  display: flex;
+  align-items: center;
+  margin-top: 1.875rem;
+  justify-content: space-between;
+}
+
+.blog-buttons {
+  background: #5c8ee6;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
@@ -717,6 +789,15 @@ body::-webkit-scrollbar {
 
   .slider-buttons {
     display: flex;
+  }
+
+  .primary-buttons-wrapper {
+    height: 40px;
+  }
+
+  .primary-button-prev,
+  .primary-button-next {
+    width: 60px;
   }
 
   .steps-slider-buttons {
