--- a/css/style.css
+++ b/css/style.css
@@ -676,6 +676,13 @@ body::-webkit-scrollbar {
   height: 70px;
 }
 
+.section-title-blog {
+  font-size: 3.7rem;
+  line-height: 120%;
+  letter-spacing: 0.7px;
+  margin-bottom: 3.5rem;
+}
+
 .blog-card {
   display: flex;
   position: relative;
@@ -716,15 +723,17 @@ body::-webkit-scrollbar {
   line-height: 160%;
   margin-bottom: 10px;
   margin-top: 0;
+  word-spacing: 1.4px;
 }
 
 .blog-card-text {
   color: rgb(255, 255, 255);
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 160%;
   font-style: normal;
   margin: 0;
+  letter-spacing: 0.4px;
 }
 
 .blog-slider-footer {
@@ -736,6 +745,129 @@ body::-webkit-scrollbar {
 
 .blog-buttons {
   background: #5c8ee6;
+}
+
+.blog-button-next {
+  padding-right: 15px;
+  border: 0;
+}
+.blog-button-prev {
+  padding-left: 15px;
+  border: 0;
+}
+
+.bg-grey {
+  background: rgb(240, 242, 245);
+}
+.section-cta {
+  position: relative;
+  padding-top: 6.25rem;
+  padding-bottom: 6.25rem;
+  margin-top: 9.375rem;
+}
+.cta-image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  max-width: 45rem;
+  width: 50%;
+}
+
+.cta-form-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.cta-form {
+  max-width: 52.5rem;
+}
+
+.cta-form-text {
+  color: rgb(130, 138, 153);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+  letter-spacing: 0%;
+  text-align: left;
+  font-style: normal;
+  margin-top: 1.375rem;
+  margin-bottom: 2.5rem;
+  max-width: 40rem;
+}
+
+.input-group-wrapper {
+  display: flex;
+  gap: 1.875rem;
+}
+.input-group {
+  position: relative;
+  height: 66px;
+  flex-grow: 1;
+  background-color: #f0f2f5;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1.25rem 1.875rem;
+  border: 1px solid #e4e4eb;
+  background-color: transparent;
+  outline: none;
+}
+.input-group-label {
+  position: absolute;
+  cursor: text;
+  top: 1.5rem;
+  left: 1.975rem;
+  color: rgb(130, 138, 153);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+  transition: top 0.2s, left 0.2s, font-size 0.2s;
+  padding: 0 0.625rem;
+}
+
+.input:focus {
+  border: 1px solid rgb(92, 142, 230);
+}
+
+.input:focus ~ .input-group-label,
+.input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
+  top: -0.5rem;
+  left: 1.25rem;
+  font-size: 0.625rem;
+  background-color: inherit;
+}
+.cta-form-footer {
+  display: flex;
+  align-items: center;
+  margin-top: 1.875rem;
+  gap: 1.875rem;
+}
+.cta-form-button {
+  flex-shrink: 0;
+}
+
+.notify {
+  display: flex;
+  align-items: flex-start;
+  gap: 0.625rem;
+}
+
+.notify-icon {
+  flex-shrink: 0;
+}
+
+.notify-text {
+  margin: 0;
+  max-width: 23.75rem;
+  color: rgb(130, 138, 153);
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 160%;
 }
 
 @media (max-width: 1700px) {
